# Turtles

./: .gitignore  CMakeLists.txt  Doxyfile  Index.html  README.md  SSH.txt  Usage.txt  dir.txt  logo.txt
assets/tests/: Gaussian.txt  bilateral.txt
documentation/def/: doxygen.def
documentation/docbook/: _core_8cpp.xml  _core_8cpp__dep__incl.md5  _core_8cpp__incl.md5  _core_8h.xml  _core_8h__dep__incl.md5  _core_8h__incl.md5  _logger_8cpp.xml  _logger_8cpp__dep__incl.md5  _logger_8cpp__incl.md5  _logger_8h.xml  _logger_8h__dep__incl.md5  _logger_8h__incl.md5  _settings_8cpp.xml  _settings_8cpp__dep__incl.md5  _settings_8cpp__incl.md5  _settings_8h.xml  _settings_8h__dep__incl.md5  _settings_8h__incl.md5  _test_8cpp.xml  _test_8cpp__dep__incl.md5  _test_8cpp__incl.md5  _yenot_8cpp.xml  _yenot_8cpp__dep__incl.md5  _yenot_8cpp__incl.md5  _yenot_8h.xml  _yenot_8h__dep__incl.md5  _yenot_8h__incl.md5  _yenot_database_8cpp.xml  _yenot_database_8cpp__dep__incl.md5  _yenot_database_8cpp__incl.md5  _yenot_server_8cpp.xml  _yenot_server_8cpp__dep__incl.md5  _yenot_server_8cpp__incl.md5  _yenot_server_8h.xml  _yenot_server_8h__dep__incl.md5  _yenot_server_8h__incl.md5  dir_1f39728e99d76504aeda9ef790893834.xml  dir_47149ddf4d37e6ab9ee4bf65114eb69b.xml  dir_5ceb4429e36b40aa17cb4224c37bec70.xml  dir_5ceb4429e36b40aa17cb4224c37bec70_dep.md5  (+67 more)
documentation/html/: _core_8cpp.html  _core_8cpp__incl.map  _core_8cpp__incl.md5  _core_8cpp_source.html  _core_8h.html  _core_8h__dep__incl.map  _core_8h__dep__incl.md5  _core_8h__incl.md5  _core_8h_source.html  _logger_8cpp.html  _logger_8cpp__incl.map  _logger_8cpp__incl.md5  _logger_8cpp_source.html  _logger_8h.html  _logger_8h__dep__incl.map  _logger_8h__dep__incl.md5  _logger_8h_source.html  _settings_8cpp.html  _settings_8cpp__incl.map  _settings_8cpp__incl.md5  _settings_8cpp_source.html  _settings_8h.html  _settings_8h__dep__incl.map  _settings_8h__dep__incl.md5  _settings_8h__incl.map  _settings_8h_source.html  _test_8cpp.html  _test_8cpp__incl.map  _test_8cpp_source.html  _yenot_8cpp.html  _yenot_8cpp__incl.map  _yenot_8cpp__incl.md5  _yenot_8cpp_source.html  _yenot_8h.html  _yenot_8h__dep__incl.map  _yenot_8h__dep__incl.md5  _yenot_8h__incl.map  _yenot_8h__incl.md5  _yenot_8h_source.html  _yenot_database_8cpp.html  (+110 more)
documentation/latex/: _core_8cpp.tex  _core_8cpp__incl.md5  _core_8h.tex  _core_8h__dep__incl.md5  _core_8h__incl.md5  _logger_8cpp.tex  _logger_8cpp__incl.md5  _logger_8h.tex  _logger_8h__dep__incl.md5  _settings_8cpp.tex  _settings_8cpp__incl.md5  _settings_8h.tex  _settings_8h__dep__incl.md5  _settings_8h__incl.md5  _test_8cpp.tex  _test_8cpp__incl.md5  _yenot_8cpp.tex  _yenot_8cpp__incl.md5  _yenot_8h.tex  _yenot_8h__dep__incl.md5  _yenot_8h__incl.md5  _yenot_database_8cpp.tex  _yenot_database_8cpp__incl.md5  _yenot_server_8cpp.tex  _yenot_server_8h.tex  dir_1f39728e99d76504aeda9ef790893834.tex  dir_47149ddf4d37e6ab9ee4bf65114eb69b.tex  dir_5ceb4429e36b40aa17cb4224c37bec70.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_6bc5de928e63a344e52ce2541be8d89d.tex  dir_76f6fa3fd9e57b78c21cd37238297539.tex  dir_85eb7e850db59305492b283791b761af.tex  dir_95501ef75b07d1869a7744b8bd301e60.tex  dir_aebb8dcc11953d78e620bbef0b9e2183.tex  dir_aebb8dcc11953d78e620bbef0b9e2183_dep.md5  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.tex  dir_feabc155523ba6842abc981241f427d6.tex  files.tex  group__core.md5  group__core.tex  (+45 more)
documentation/rtf/: _core_8cpp__incl.md5  _core_8h__dep__incl.md5  _logger_8cpp__incl.md5  _logger_8h__dep__incl.md5  _settings_8h__dep__incl.md5  _settings_8h__incl.md5  _test_8cpp__incl.md5  _yenot_8cpp__incl.md5  _yenot_8h__dep__incl.md5  dir_1f39728e99d76504aeda9ef790893834.rtf  dir_1f39728e99d76504aeda9ef790893834_dep.md5  dir_47149ddf4d37e6ab9ee4bf65114eb69b.rtf  dir_47149ddf4d37e6ab9ee4bf65114eb69b_dep.md5  dir_5ceb4429e36b40aa17cb4224c37bec70.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_6bc5de928e63a344e52ce2541be8d89d.rtf  dir_6bc5de928e63a344e52ce2541be8d89d_dep.md5  dir_76f6fa3fd9e57b78c21cd37238297539.rtf  dir_85eb7e850db59305492b283791b761af.rtf  dir_95501ef75b07d1869a7744b8bd301e60.rtf  dir_aebb8dcc11953d78e620bbef0b9e2183.rtf  dir_aebb8dcc11953d78e620bbef0b9e2183_dep.md5  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.rtf  dir_c184e51c84f2c3f0345bbc8a0d75d3e1_dep.md5  dir_feabc155523ba6842abc981241f427d6.rtf  dir_feabc155523ba6842abc981241f427d6_dep.md5  refman.rtf  server_2src_2_core_8cpp__incl.md5  server_2src_2_logger_8cpp__incl.md5  server_2src_2_settings_8cpp__incl.md5  tests_2src_2server_2_core_8cpp__incl.md5  tests_2src_2server_2_logger_8cpp__dep__incl.md5  tests_2src_2server_2_settings_8cpp__dep__incl.md5
documentation/xml/: _core_8cpp.xml  _core_8h.xml  _logger_8cpp.xml  _logger_8h.xml  _settings_8cpp.xml  _settings_8h.xml  _test_8cpp.xml  _yenot_8cpp.xml  _yenot_8h.xml  _yenot_database_8cpp.xml  _yenot_server_8cpp.xml  _yenot_server_8h.xml  dir_1f39728e99d76504aeda9ef790893834.xml  dir_47149ddf4d37e6ab9ee4bf65114eb69b.xml  dir_5ceb4429e36b40aa17cb4224c37bec70.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_6bc5de928e63a344e52ce2541be8d89d.xml  dir_76f6fa3fd9e57b78c21cd37238297539.xml  dir_85eb7e850db59305492b283791b761af.xml  dir_95501ef75b07d1869a7744b8bd301e60.xml  dir_aebb8dcc11953d78e620bbef0b9e2183.xml  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.xml  dir_feabc155523ba6842abc981241f427d6.xml  group__core.xml  group__corecpp.xml  group__coreh.xml  group__database.xml  group__loggercpp.xml  group__loggerh.xml  group__server.xml  group__serveryenotservercpp.xml  group__serveryenotserverh.xml  group__settingscpp.xml  group__settingsh.xml  group__test.xml  group__testcpp.xml  group__yenot.xml  group__yenotcpp.xml  group__yenotdatabasecpp.xml  group__yenoth.xml  (+11 more)
lib/gtest/: gtest_main.lib
src/client/: YenotClient.cpp  YenotClient.h
src/core/: Core.cpp  (+11 more)
yenot/server/: CMakeLists.txt
yenot/server/src/: Core.cpp  Core.h  Logger.cpp  Settings.cpp  Settings.h  Yenot.cpp  Yenot.h
yenot/tests/: CMakeLists.txt  README.md  TEST.md
yenot/tests/src/: Test.cpp
yenot/tests/src/server/: Core.cpp  Logger.cpp  Settings.cpp
(+186 files in other folders)
